fix: text wrap

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -193,6 +193,7 @@ hr {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
 }
 
@@ -218,7 +219,7 @@ hr {
     background-color: var(--background-color);
     box-shadow: 0px 1px 3px 0px #13151A inset;
     border-bottom: 1px solid #353535;
-    padding: 8px;
+    padding: 6px 8px;
     border-radius: 10px;
     font-size: 14px;
     line-height: 1.5;
@@ -259,6 +260,10 @@ hr {
 
 .highlight pre {
     padding: 16px;
+}
+
+.highlight pre span {
+  text-wrap: balance;
 }
 
 /* footer */
